--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "ember-sass-atoms",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "0.0.0-alpha.1",
+  "description": "Sass Toolkit Inspired by Tachyons",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "sass"
   ],
   "license": "MIT",
-  "author": "",
+  "contributors": "Michael Swanson <mswanson@forge512.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/forge512/ember-sass-atoms"
+  },
   "scripts": {
     "build": "ember build",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
@@ -20,7 +24,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-sass": "^7.1.7"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
