--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "ember-sass-atoms",
   "version": "0.0.0-alpha.1",
-  "description": "Sass Toolkit Inspired by Tachyons",
-  "keywords": [
-    "ember-addon",
-    "sass"
-  ],
+  "description": "Sass Toolkit Inspired by Material Design & Tachyons",
+  "keywords": ["ember-addon", "sass"],
   "license": "MIT",
   "contributors": "Michael Swanson <mswanson@forge512.com>",
   "directories": {
@@ -48,9 +45,19 @@
     "ember-source": "~3.1.0-beta.1",
     "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^5.2.1",
-    "loader.js": "^4.2.3"
+    "eslint-plugin-prettier": "^2.6.0",
+    "loader.js": "^4.2.3",
+    "prettier": "^1.11.1",
+    "stylelint": "^9.2.0",
+    "stylelint-config-prettier": "^3.2.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^0.8.1",
+    "stylelint-scss": "^3.0.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
